Start work on Spigot adapters